kiit cse app added

--- a/downloads.html
+++ b/downloads.html
@@ -83,9 +83,9 @@
                         <div class="btn-group float-end downloadButton" role="group">
                             <button type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false"> Download </button>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="#">Android</a></li>
+                                <li><a class="dropdown-item" href="https://raw.githubusercontent.com/bibek10550/software/main/KIIT%20CSE.apk">Android</a></li>
                                 <li><a class="dropdown-item" href="https://raw.githubusercontent.com/bibek10550/software/main/KIIT%20CSE.exe">Window</a></li>
-                                <li><a class="dropdown-item" href="#">Linux</a></li>
+                                <li><a class="dropdown-item" href="https://raw.githubusercontent.com/bibek10550/software/main/KIITCSE-linux-x64.zip">Linux</a></li>
                             </ul>
                         </div>
                     </div>
