--- a/software.html
+++ b/software.html
@@ -224,12 +224,12 @@
             "https://bibek10550.github.io/kiitcse",
             "https://bibek10550.github.io/kiitcse/assets/image/KIIT_CSE_blue_name_transparent.png",
             "This resource hub simplifies your educational journey in Computer Science and Engineering (CSE). It offers: Previous Year Questions (PYQs), Concise Notes, Video Lectures.",
+            "Android",
+            "https://raw.githubusercontent.com/bibek10550/software/main/KIIT%20CSE.apk",
             "Window",
             "https://raw.githubusercontent.com/bibek10550/software/main/KIIT%20CSE.exe",
             "Linux",
             "https://raw.githubusercontent.com/bibek10550/software/main/KIITCSE-linux-x64.zip",
-            "MacOS",
-            "https://raw.githubusercontent.com/bibek10550/software/main/KIIT%20CSE-MacOS.rar",
 
 
             "office 365",
