"Updated links to Firewall script from GitHub to local assets"

--- a/software.html
+++ b/software.html
@@ -72,7 +72,7 @@
         <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
       </div> -->
     <div class="alert alert-warning alert-dismissible fade show mt-5 gy-lg-5 stickyAlert" role="alert">
-        If you want that the downloaded software doesn't get connected with internet then make sure to use  <a href="https://github.com/bibek10550/software/blob/main/firewall%20(enable%20%2C%20disable).bat" class="alert-link">Firewall</a>. Run the script as <strong>administrator</strong>
+        If you want that the downloaded software doesn't get connected with internet then make sure to use  <a href="./assets/others/firewall (enable , disable).bat" class="alert-link">Firewall</a>. Run the script as <strong>administrator</strong>
         <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
     </div>
     <!-- modal Disclaimer -->
@@ -653,7 +653,8 @@
             "https://cdn1.iconfinder.com/data/icons/multimedia-and-security/53/82-512.png",
             "This script is now user-friendly and flexible, allowing the user to block or enable outbound, inbound, or both types of connections for a specific program or all programs.Use it as administrator and give the application path and name of application.",
             "Script",
-            "https://github.com/bibek10550/software/blob/main/firewall%20(enable%20%2C%20disable).bat",
+            // "https://github.com/bibek10550/software/blob/main/firewall%20(enable%20%2C%20disable).bat",
+            "./assets/others/firewall (enable , disable).bat",
             "",
             "",
             "",
