"Added new software entry for 'Material Student Record' and removed commented out lines."

--- a/software.html
+++ b/software.html
@@ -661,17 +661,17 @@
             "",
 
 
-            // "filter",
-            // "name",
-            // "link",
-            // "img_link",
-            // "desc",
-            // "1stName",
-            // "1stLink",
-            // "",
-            // "",
-            // "",
-            // "",
+            "material student record",
+            "Materials",
+            "https://raw.githubusercontent.com/bibek10550/software/main/Materials.apk",
+            "https://img.icons8.com/?size=256&id=JjXkZB4POgHN&format=png",
+            "It contains the materials regarding the KIIT University which contains the student detail of 2022 admitted batch and many more things.",
+            "Android",
+            "https://raw.githubusercontent.com/bibek10550/software/main/Materials.apk",
+            "",
+            "",
+            "",
+            "",
 
 
             // "filter",
